# admitly

./: .env.example  .eslintrc.json  .gitignore  .mcp.json  ADMIN_API_GUIDE.md  ANTIGRAVITY_TASKS.md  BACKEND_IMPLEMENTATION_PLAN.md  CUSTOM_DOMAIN_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DOMAIN_SETUP_QUICKSTART.md  FRONTEND_COMPLETION_REPORT.md  FRONTEND_FEATURE_AUDIT.md  GEMINI_COLLABORATION_GUIDE.md  GEMINI_ISSUES.md  GEMINI_TASKS.md  GEMINI_WORK_REPORTS.md  INTEGRATION_REPORT.md  PHASE4_QUICK_START.md  PHASE4_SEARCH_IMPLEMENTATION.md  PROJECT_STATUS.md  README.md  RENDER_SETUP_GUIDE.md  SECURITY_AND_TESTING_AUDIT.md  SPIDER_IMPLEMENTATION_GUIDE.md  START_SEARCH_TEST.md  TRUSTHOST_DNS_SETUP.md  admitly_brand_and_marketing_strategy.md  admitly_survey_nigeria.md  ai_system_prompt.md  branding-strategy.md  claude.md  create_admin_final.py  create_admin_profile.py  docker-compose.meilisearch.yml  e2e_error.txt  fix_admin_user.py  genrules.md  lint_output.txt  package.json  (+28 more)
services/api/: .env.example  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  main.py  pyproject.toml  requirements.txt  seed_data.py  sync_meilisearch.py  sync_meilisearch_production.py  test_completed_tasks.py
services/api/core/: config.py  database.py  dependencies.py  logging.py  prompts.py  security.py
services/api/routers/: admin.py  auth.py  bookmarks.py  deadlines.py  guidance.py  institutions.py  notifications.py  programs.py  saved_searches.py  search.py  search_history.py  user_profile.py
services/api/schemas/: admin.py  auth.py  bookmarks.py  deadlines.py  institutions.py  programs.py  (+4 more)
(+277 files in other folders)
